--- a/style.css
+++ b/style.css
@@ -56,3 +56,12 @@ ul {
   padding: 0px 20px 20px 20px;
   margin-left: 20px;
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+}
