--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ p {
 .content1 img {
   width: 100%;
   padding: 0px 20px 20px 20px;
+  transition: 0.5s;
+}
+
+.content1 img:hover {
+  transform: scale(2);
 }
 
 ul {
