--- a/style.css
+++ b/style.css
@@ -62,6 +62,31 @@ ul {
   margin-left: 20px;
 }
 
+.flag {
+  height: 100px;
+  width: 100%;
+  padding: 0px 20px 0px 20px;
+  display: flex;
+}
+
+#left {
+  height: 100%;
+  width: 100%;
+  background-color: #008c45;
+}
+
+#mid {
+  height: 100%;
+  width: 100%;
+  background-color: #f4f5f0;
+}
+
+#right {
+  height: 100%;
+  width: 100%;
+  background-color: #cd212a;
+}
+
 footer {
   position: fixed;
   left: 0;
