--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 h1 {
@@ -57,15 +59,10 @@ p {
   transform: scale(2);
 }
 
-ul {
-  padding: 0px 20px 20px 20px;
-  margin-left: 20px;
-}
-
 .flag {
   height: 100px;
   width: 100%;
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px 20px 20px;
   display: flex;
 }
 
