--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   list-style-type: none;
 }
 
+body {
+  margin-bottom: 40px;
+}
+
 h1 {
   margin: 20px;
   position: relative;
@@ -85,6 +89,8 @@ p {
 }
 
 footer {
+  height: 20px;
+  padding-bottom: 20px;
   position: fixed;
   left: 0;
   bottom: 0;
