--- a/style.css
+++ b/style.css
@@ -94,3 +94,13 @@ footer p {
   padding: 0;
   margin: 0;
 }
+
+#no-content {
+  position: fixed;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 999;
+  height: 50vh;
+  width: 50vw;
+}
